turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:1: error: unbound wildcard type
val x = Array[(Int), _](
                     ^